--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
 
   <div class="header__group">
     <div class="header__group-input">
-      <input id="search-control" type="text">
+      <input id="search-control" type="text" onlyAlphaNumeric blockPaste>
       <label for="search-control">SEARCH POKEMON</label>
     </div>
 
